test/fail/non_static_module.mo
module Wrong = {
  func f() { assert false;};
  let _ = f(); // non_static!
};

